added code HW#5 v.1

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ ol {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-  list-style: none;
+  /* list-style: none; */
 }
 
 img {
@@ -44,6 +44,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
+
+  background-image: linear-gradient(to bottom, rgba(121, 134, 156, 0.312), rgba(121, 134, 156, 0.8)), url('./images/bg.jpg');
+  /* background-repeat: no-repeat; */
+  background-position: center;
+  background-size: cover;
 }
 
 code {
@@ -72,13 +77,4 @@ html {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-ul>.current-menu {
-  color: #ffff00;
-  background-color: #303f9f;
-  box-shadow: 0 2px 3px 2px #030c47,
-    0 -2px 3px 2px #030c47,
-    -2px 0 3px 2px #030c47,
-    2px 0 3px 2px #030c47;
 }
